compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__generic__typech_generic_method_static_call_unsatisfied_constraints.snap
---
source: compiler/lume_typech/src/tests/check/generic.rs
description: "trait A {}\n\n        trait B {}\n\n        struct Foo { }\n\n        impl Foo {\n            pub fn bar<T: A + B>(val: T) -> T {\n                return val;\n            }\n        }\n\n        fn bar() {\n            Foo::bar<Boolean>(false);\n        }"
---
× error[LM4120]: type constraint not satisfied
    ╭───────────
 13 │         fn bar() {
 14 │             Foo::bar<Boolean>(false);
    │                      ^^^^^^^ type Boolean does not implement A...
 15 │         }
    ∶ 
 7  │         impl Foo {
 8  │             pub fn bar<T: A + B>(val: T) -> T {
    │                           ^ ...which is required by the type parameter T
 9  │                 return val;
    ╰──
× error[LM4120]: type constraint not satisfied
    ╭───────────
 13 │         fn bar() {
 14 │             Foo::bar<Boolean>(false);
    │                      ^^^^^^^ type Boolean does not implement B...
 15 │         }
    ∶ 
 7  │         impl Foo {
 8  │             pub fn bar<T: A + B>(val: T) -> T {
    │                               ^ ...which is required by the type parameter T
 9  │                 return val;
    ╰──
